# NVMB

./: .gitignore  CMakeLists.txt  README.md
golem/: CMakeLists.txt  main.go
golem/golem_base/: ABOUT.md  analyzer.go  analyzer_test.go  auto_label.go  basic_set.go  basic_types_extensions.go  bkmk.md  golem.go  (+40 more)
include/: bank_unit.hpp  bond_functions.hpp  comm_flare.hpp  contract.hpp  contract_review_functions.hpp  discovery_flare.h  extras.hpp  libgolem_exec.h  network.hpp  network1.h  network_generation.hpp  new_contract_functions.hpp  node_competitor_functions.hpp  node_file_reader.hpp  node_processing_unit.hpp  node_strategos.hpp  nvmb_node.hpp  plan.hpp  proposition.hpp  timestamp_unit.hpp  vuln.hpp
src/: CMakeLists.txt  bank_unit.cpp  bond_functions.cpp  contract.cpp  contract_review_functions.cpp  discovery_flare.cpp  extras.cpp  main.cpp  network.cpp  network1.cpp  network_autorun.cpp  network_flare_functions.cpp  network_generation.cpp  network_measure_functions.cpp  new_contract_functions.cpp  node_competitor_functions.cpp  node_discovery.cpp  node_file_reader.cpp  node_planner.cpp  node_processing_unit.cpp  node_strategos.cpp  node_strategy_bridge.cpp  npu_path_functions.cpp  nvmb_node.cpp  proposition.cpp
test/: CMakeLists.txt  bond_add_tests.cpp  bond_break_tests.cpp  bond_cost_tests.cpp  class_declarations.cpp  class_declarations.hpp  comm_flare_execution_test.cpp  contract_add_tests.cpp  contract_break_tests.cpp  log_data_tests.cpp  main.cpp  network1.cpp  network1.h  network_bank_test.cpp  network_dfs_test.cpp  network_full_functionality_test.cpp  network_node_strategy_tests.cpp  node_file_reader_test.cpp  node_planner_test.cpp  npu_tests.cpp
(+12 files in other folders)
